Bug 474949 - Full store.kde.org description is cut off in the GHNS dialog's details page
Summary: Full store.kde.org description is cut off in the GHNS dialog's details page
Status: RESOLVED FIXED
Alias: None
Product: frameworks-knewstuff
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.110.0
Platform: Arch Linux Linux
: NOR major
Target Milestone: ---
Assignee: Dan Leinir Turthra Jensen
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-09-27 19:33 UTC by Schlaefer
Modified: 2024-04-04 06:05 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0
Sentry Crash Report:


Attachments
difference between Widget Exporer and Discover (614.43 KB, image/jpeg)
2023-09-27 19:33 UTC, Schlaefer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Schlaefer 2023-09-27 19:33:59 UTC
Created attachment 161917 [details]
difference between Widget Exporer and Discover

SUMMARY

The "Download New Widgets" explorer" reachable through the "Add Widgets" side panel cuts off the widget description. It should show the full widget description like Discover does.


STEPS TO REPRODUCE
1. Search for a widget on Discover and the Widget Explorer
2. Compare descriptions between those two

See attached image for a widget example. Said widget with text on store.kde.org: https://store.kde.org/p/2086390/

OBSERVED RESULT

The Widget Explorer doesn't show the full widget description.

EXPECTED RESULT

The Widget Explorer should show the full widget description similar to Discover.

SOFTWARE/OS VERSIONS
Operating System: EndeavourOS 
KDE Plasma Version: 5.27.8
KDE Frameworks Version: 5.110.0
Qt Version: 5.15.10
Kernel Version: 6.5.5-2-cachyos (64-bit)
Graphics Platform: Wayland

ADDITIONAL INFORMATION

Often the widget description includes valuable information about features and/or advanced steps for setting up the widget. Cutting off that information is rather unfortunate.
Comment 1 Bug Janitor Service 2023-09-27 20:33:51 UTC
Thank you for the bug report!

However Plasma 5.25.4 is no longer eligible for support or maintenance from KDE; supported versions are 5.27, and 5.27 or newer. Please upgrade to a supported version as soon as your distribution makes it available to you. Plasma is a fast-moving project, and bugs in one version are often fixed in the next one.

If you need support for Plasma 5.25.4, please contact your distribution, who bears the responsibility of providing support for older releases that are no longer supported by KDE.

If you can reproduce the issue after upgrading to a supported version, feel free to re-open this bug report.
Comment 2 Schlaefer 2023-09-27 20:38:56 UTC
Reopening

This was a filing error (assuming the version bugtracker dropdown was defaulting to the latest release). This is an issue on the currently latest 5.27.8.
Comment 3 Nate Graham 2023-09-28 19:33:57 UTC
Ugh, you're right; can reproduce in Frameworks 6 too. We should not be truncating content here.
Comment 4 Ismael Asensio 2023-11-02 23:14:59 UTC Comment hidden (spam)
Comment 5 Ismael Asensio 2023-11-02 23:16:33 UTC Comment hidden (spam)
Comment 6 Bug Janitor Service 2023-11-04 19:21:43 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/knewstuff/-/merge_requests/282
Comment 7 Ismael Asensio 2023-11-06 18:38:34 UTC
Git commit 5629ee2de5facefb0b31df40d086b23f109e6b86 by Ismael Asensio.
Committed on 05/11/2023 at 14:59.
Pushed by iasensio into branch 'master'.

EntryDetails: Update entry contents when showing the details page

When showing the details page for an entry, we were just using
the data fetched on the previous search that included this entry.

This information is more limited:
- it does not include all the fields (ex. the donations link)
- the description is capped to only 300 characters

Now we retrive the detailed content for the information and update
the model and the view fields accordingly.
FIXED-IN: KF6

M  +25   -0    src/qtquick/qml/EntryDetails.qml
M  +2    -13   src/qtquick/qml/Page.qml
M  +9    -0    src/qtquick/quickengine.cpp
M  +2    -0    src/qtquick/quickengine.h
M  +5    -0    src/qtquick/quickitemsmodel.cpp

https://invent.kde.org/frameworks/knewstuff/-/commit/5629ee2de5facefb0b31df40d086b23f109e6b86
Comment 8 Scarlett Moore 2024-04-03 13:22:12 UTC
This was only fixed in 6? What about us 5 users. I am on 5.27.11 and the issue remains...
Comment 9 Nate Graham 2024-04-04 06:05:06 UTC
It's a large-ish change, so we didn't feel comfortable backporting it to KF5 since no one on the dev team is still using it. But feel free to backport it yourself to Kubuntu's KF5 KNewStuff package if it works fine in your testing. If so, we'd appreciate a report about it and then we might consider backporting it to the kf5 branch too.