EntryDetails: Update entry contents when showing the details page

When showing the details page for an entry, we were just using
the data fetched on the previous search that included this entry.

This information is more limited:
- it does not include all the fields (ex. the donations link)
- the description is capped to only 300 characters

Now we retrive the detailed content for the information and update
the model and the view fields accordingly.

BUG: 474949
FIXED-IN: KF6